<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="Angka 1:"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/angka1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka1"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp" >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:text="Angka 2:" />

        <EditText
            android:id="@+id/angka2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/angka2"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/btnTambah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTambah"
                android:layout_marginLeft="20sp"/>
            <Button
                android:id="@+id/btnKurang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnKurang"
                android:layout_marginLeft="20sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/btnKali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnKali"
                android:layout_marginLeft="20sp" />
            <Button
                android:id="@+id/btnBagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnBagi"
                android:layout_marginLeft="20sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:text="@string/hasil"
        android:layout_marginLeft="20sp"/>

</LinearLayout>
